* 2007-08-22 - dennis.sieben@open-xchange.com

  - Bugfix ID#9023 createcontext name should be added to lmappings
  
* 2007-08-22 - choeger@open-xchange.com

  - Bugfix ID#8989 generatempasswd no newline in output
  - Bugfix ID#8991 initconfigdb, return code is always 0
  - Bugfix ID#8853 'listcontexts' searchpattern only works for context id

* 2007-08-21 - dennis.sieben@open-xchange.com

  - Bugfix ID#8543 rename of movedatabasecontext and movefilestorecontext
  - Bugfix ID#9004 unregisterserver operation by name missing
  - Bugfix ID#8993 clts should all be singular
  - Bugfix ID#9007 Context login mappings not validated
  - Bugfix ID#8994 oxinstaller --master-pass should not be needed if --disableauth is in use
  
* 2007-08-20 - choeger@open-xchange.com

  - Bugfix ID#8949 Unable to deinstall admin-plugin-hosting package when removing depending
  package

* 2007-08-16 - dennis.sieben@open-xchange.com

  - Bugfix ID#8917 CLT 'showruntimestats' does not give any output
  
* 2007-08-16 - choeger@open-xchange.com

  - Bugfix ID#8915 Classpath problems with CLTs

* 2007-08-14 - choeger@open-xchange.com

  - Bugfix ID#8822 'generatepassword' creates curious output

* 2007-08-09 - choeger@open-xchange.com

  - Bugfix ID#8623 oxinstaller: switch needed to turn on/of context authentication

* 2007-08-07 - dennis.sieben@open-xchange.com

  - Bugfix ID#8629 movefilestorecontext StringIndexOutOfBoundsException
  - Bugfix ID#8593 Operations by name not possible

* 2007-08-06 - choeger@open-xchange.com

  - Bugfix ID#8642 "listusers" command line tool output is limited to three digits
    as a side effect of now dynamically determining the widest row, this is also fixed
  
* 2007-08-02 - choeger@open-xchange.com

  - Bugfix ID#8651 no access must be the default when not specifying access on commandline
    using lowest set of access options as default (webmail)
  
* 2007-07-31 - dennis.sieben@open-xchange.com
